--- a/public/frontend/css/colors/default.css
+++ b/public/frontend/css/colors/default.css
@@ -23,7 +23,7 @@
 .sidebar .widget .tagcloud > a:hover,
 .tns-nav button.tns-nav-active,
 .personal-hero:before {
-    background-color: #e54b4b !important;
+    background-color: #1702d1 !important;
 }
 
 .text-primary,
@@ -55,7 +55,7 @@
 .sidebar .widget .post-recent .post-recent-content a:hover,
 .comment-area .media-list .media .media-body a:hover,
 .dropdown-item:focus, .dropdown-item:hover {
-    color: #e54b4b !important;
+    color: #1702d1 !important;
 }
 
 .btn-primary,
@@ -74,12 +74,12 @@
 .section-title .title-box:after,
 .owl-theme .owl-controls .owl-page span,
 .tns-nav button {
-    border-color: #e54b4b !important;
+    border-color: #1702d1 !important;
 }
 
 a.text-primary:hover, 
 a.text-primary:focus {
-    color: #dd2020 !important;
+    color: #fff !important;
 }
 
 .btn-primary,
@@ -97,8 +97,8 @@ a.text-primary:focus {
 .btn-primary:active, 
 .btn-primary.active, 
 .btn-primary.focus {
-    background-color: #dd2020 !important;
-    border-color: #dd2020 !important;
+    background-color: #1702d1 !important;
+    border-color: #1702d1 !important;
 }
 
 .bg-overlay-primary {
